// Copyright 2022 Google LLC
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//      http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

syntax = "proto3";

package google.cmrt.sdk.job_lifecycle_helper.v1;

option java_multiple_files = true;
option java_outer_classname = "JobLifecycleHelperConfigurationKeysProto";
option java_package = "com.google.cmrt.sdk.job_lifecycle_helper.v1";

// For faster allocations of sub-messages.
option cc_enable_arenas = true;

// Configuratiion keys for client level.
enum ClientConfigurationKeys {
  // Invalid key.
  UNKNOWN_JOB_LIFECYCLE_HELPER_CONFIGURATION_KEY = 0;
  // Required. The retry limit of a job.
  CMRT_JOB_LIFECYCLE_HELPER_RETRY_LIMIT = 1;
  // Required. The time everytime the visiblity timeout of a job is extended.
  CMRT_JOB_LIFECYCLE_HELPER_VISIBILITY_TIMEOUT_EXTEND_TIME = 2;
  // Required. The processing timeout of a job.
  CMRT_JOB_LIFECYCLE_HELPER_JOB_PROCESSING_TIMEOUT = 3;
  // Required. The time the job extending worker pauses before it restarts.
  CMRT_JOB_LIFECYCLE_HELPER_JOB_EXTENDING_WORKER_SLEEP_TIME = 4;
  // Required. The flag that enable metrics recording.
  CMRT_JOB_LIFECYCLE_HELPER_JOB_ENABLE_METRIC_RECORDING = 5;
  // Optional. The metric namespace to use when recording server metrics.
  // It is required if batch recording is disabled.
  CMRT_JOB_LIFECYCLE_HELPER_JOB_METRIC_NAMESPACE = 6;
}
